# Computer-System-Architecture

Homework1_Derezovskiy/: CMakeLists.txt  ball.cpp  ball.h  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  tetrahedron.cpp  tetrahedron.h  Отчёт.txt
Homework1_Derezovskiy/tests/: results3.txt  test02.txt  test03.txt  test05.txt
Homework2_Derezovskiy/: .editorconfig  Homework2_Derezovskiy.sln  Read_me.txt  Отчёт.txt
Homework2_Derezovskiy/Homework2_Derezovskiy/: Homework2_Derezovskiy.cpp  Homework2_Derezovskiy.vcxproj  Homework2_Derezovskiy.vcxproj.filters  ball.cpp  ball.h  container.cpp  container.h  parallelepiped.cpp  parallelepiped.h  rnd.h  shape.cpp  shape.h  tetrahedron.cpp  tetrahedron.h
Homework2_Derezovskiy/Homework2_Derezovskiy/Debug/: Homework2_Derezovskiy.exe.recipe  vc142.idb
Homework2_Derezovskiy/Tests/: Homework2_Derezovskiy.ilk  test01.txt  test02.txt  test03.txt  test04.txt
Homework2_Derezovskiy/Tests/results/: output_10000items_1.txt  output_10000items_2.txt  output_1000items_1.txt  output_1000items_2.txt  output_9000items_1.txt  output_9000items_2.txt  result_test01_1.txt  (+9 more)
Homework3_Derezovskiy/: Read_me.txt  Отчёт.txt
Homework3_Derezovskiy/src/: ball.py  container.py  getShape.py  main.py  parallelepiped.py  tetrahedron.py
Homework4_Derezovskiy/: Read_me.txt  data.h  extdata.h  input.asm  inrnd.asm  main.c  makefile  output.asm  square.asm  Отчёт.txt
Homework4_Derezovskiy/tests/: test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
Homework5_Derezovskiy/: Read me.txt  main.cpp
(+28 files in other folders)
